samples/_failures_safe/1761634702_e99e87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_727c975a.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_727c975a.c:158:36: error: missing terminating " character
  158 |         case STATE_READING: return "
      |                                    ^
./samples/SAFE/__tmp_727c975a.c:158:9: error: expected expression at end of input
  158 |         case STATE_READING: return "
      |         ^~~~
./samples/SAFE/__tmp_727c975a.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_727c975a.c:158:9: error: expected declaration or statement at end of input
